<resources>
    <string name="app_name">FeedTheCat</string>
    <string name="button_text">Feed</string>
    <string name="satiety">Satiety</string>
    <string name="counter">0</string>
    <string name="about">About Developer</string>
    <string name="share">Share The Result</string>
    <string name="name">Chernikova Darya</string>
    <string name="group">951005</string>
    <string name="task">Lab 1</string>
    <string name="title_activity_about_me">about_me</string>
    <string name="results">My Results</string>
    <string name="date">Date</string>
    <string name="result">Result</string>
    <string name="last_game">Last Game:</string>
    <string name="last_result">0</string>
    <string name="rules">Rules</string>
    <string name="slide1">This is the Cat. The Cat is hungry all the time, so you have to feed him every day, otherwise the cat will be very upset.</string>
    <string name="slide2">Press the button to feed the Cat. For each click you get 1 satiety point. Every 15 points of satiety, the Cat will dance with happiness.</string>
    <string name="slide3_text">Satiety: 0</string>
    <string name="slide3">Every day your counter will be reset to zero. Try to keep your Cat fed.</string>
</resources>