<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_about_me"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        android:onClick="navigationMenuItemClick"/>

    <item android:id="@+id/menu_share"
        android:icon="@drawable/ic_baseline_share"
        android:title="@string/share"
        android:onClick="navigationMenuItemClick" />

    <item android:id="@+id/menu_results"
        android:icon="@drawable/ic_baseline_star_half_24"
        android:title="@string/results"
        android:onClick="navigationMenuItemClick" />

    <item android:id="@+id/menu_rules"
        android:icon="@drawable/ic_baseline_rule_24"
        android:title="@string/rules"
        android:onClick="navigationMenuItemClick" />



</menu>