<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe"
    tools:ignore="NotSibling">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:id="@+id/about_toolbar">


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/actionbar"/>

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_toolbar">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/profile_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alatsi"
            android:text="@string/group"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/task"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </RelativeLayout>
</RelativeLayout>