<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyResults">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:id="@+id/results_toolbar">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/actionbar"/>

        <ImageView
            android:id="@+id/results_back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/results"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/results_toolbar"
        android:layout_margin="40dp"
        >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:id="@+id/table_header">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:padding="10sp"
            android:textSize="20sp"
            android:layout_weight="4"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:id="@+id/res"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/white"
            android:padding="10sp"
            android:textSize="20sp"
            android:layout_weight="4"
            android:gravity="center_horizontal">
        </TextView>

    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/table_header">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/table">


    </TableLayout>

    </ScrollView>
    </RelativeLayout>

</RelativeLayout>